--- a/public/css/simple-contact-form-public.css
+++ b/public/css/simple-contact-form-public.css
@@ -1,3 +1,7 @@
+/**
+ * All of the CSS for your public-facing functionality should be
+ * included in this file.
+ */
 .scf-success {
     background-color: #d4edda;
     color: #155724;
